--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,47 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@INPROCEEDINGS{9636619,
+               author={Singh Parihar, Udit and Gujarathi, Aniket and Mehta, Kinal and Tourani, Satyajit and Garg, Sourav and Milford, Michael and Krishna, K. Madhava},
+               booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+               title={RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching},
+               year={2021},
+               volume={},
+               number={},
+               pages={1593-1600},
+               doi={10.1109/IROS51168.2021.9636619}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@misc{valloli2019wnet,
+      title={W-Net: Reinforced U-Net for Density Map Estimation}, 
+      author={Varun Kannadi Valloli and Kinal Mehta},
+      year={2019},
+      eprint={1903.11249},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@INPROCEEDINGS{8635052,
+               author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
+               booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
+               title={Data Generation Using Sequence-to-Sequence},
+               year={2018},
+               volume={},
+               number={},
+               pages={108-112},
+               doi={10.1109/RAICS.2018.8635052}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@INPROCEEDINGS{8635077,
+               author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
+               booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
+               title={Indian Language Transliteration Using Deep Learning},
+               year={2018},
+               volume={},
+               number={},
+               pages={103-107},
+               doi={10.1109/RAICS.2018.8635077}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
