first website draft

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,8 @@
                volume={},
                number={},
                pages={1593-1600},
-               doi={10.1109/IROS51168.2021.9636619}
+               doi={10.1109/IROS51168.2021.9636619},
+               selected={true}
 }
 
 @misc{valloli2019wnet,
@@ -19,7 +20,8 @@
       year={2019},
       eprint={1903.11249},
       archivePrefix={arXiv},
-      primaryClass={cs.CV}
+      primaryClass={cs.CV},
+      selected={true}
 }
 
 @INPROCEEDINGS{8635052,
