--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,8 +2,10 @@
 ---
 
 
-@INPROCEEDINGS{9636619,
+@INPROCEEDINGS{
+               abbr={IEEE IROS},
                author={Singh Parihar, Udit and Gujarathi, Aniket and Mehta, Kinal and Tourani, Satyajit and Garg, Sourav and Milford, Michael and Krishna, K. Madhava},
+               abstract={The use of local detectors and descriptors in typical computer vision pipelines work well until variations in viewpoint and appearance change become extreme. Past research in this area has typically focused on one of two approaches to this challenge: the use of projections into spaces more suitable for feature matching under extreme viewpoint changes, and attempting to learn features that are inherently more robust to viewpoint change. In this paper, we present a novel framework that combines learning of invariant descriptors through data augmentation and orthographic viewpoint projection. We propose rotation-robust local descriptors, learnt through training data augmentation based on rotation homographies, and a correspondence ensemble technique that combines vanilla feature correspondences with those obtained through rotation-robust features. Using a range of benchmark datasets as well as contributing a new bespoke dataset for this research domain, we evaluate the effectiveness of the proposed approach on key tasks including pose estimation and visual place recognition. Our system outperforms a range of baseline and state-of-the-art techniques, including enabling higher levels of place recognition precision across opposing place viewpoints and achieves practically-useful performance levels even under extreme viewpoint changes.},
                booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
                title={RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching},
                year={2021},
@@ -11,20 +13,27 @@
                number={},
                pages={1593-1600},
                doi={10.1109/IROS51168.2021.9636619},
-               selected={true}
+               selected={true},
+               bibtex_show={true},
+               html={https://uditsinghparihar.github.io/RoRD/},
+               url={https://arxiv.org/abs/2103.08573},
 }
 
-@misc{valloli2019wnet,
+@misc{
+      abbr={arXiv},
       title={W-Net: Reinforced U-Net for Density Map Estimation}, 
       author={Varun Kannadi Valloli and Kinal Mehta},
       year={2019},
+      booktitle={arXiv},
       eprint={1903.11249},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
-      selected={true}
+      selected={true},
+      bibtex_show={true},
 }
 
-@INPROCEEDINGS{8635052,
+@INPROCEEDINGS{
+               abbr={IEEE RAICS},
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Data Generation Using Sequence-to-Sequence},
@@ -32,10 +41,12 @@
                volume={},
                number={},
                pages={108-112},
-               doi={10.1109/RAICS.2018.8635052}
+               doi={10.1109/RAICS.2018.8635052},
+               bibtex_show={true},
 }
 
-@INPROCEEDINGS{8635077,
+@INPROCEEDINGS{
+               abbr={IEEE RAICS},
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Indian Language Transliteration Using Deep Learning},
@@ -43,7 +54,8 @@
                volume={},
                number={},
                pages={103-107},
-               doi={10.1109/RAICS.2018.8635077}
+               doi={10.1109/RAICS.2018.8635077},
+               bibtex_show={true},
 }
 
 
