--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,14 +9,13 @@
                booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
                title={RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching},
                year={2021},
-               volume={},
-               number={},
                pages={1593-1600},
                doi={10.1109/IROS51168.2021.9636619},
                selected={true},
                bibtex_show={true},
-               html={https://uditsinghparihar.github.io/RoRD/},
+               html={https://uditsinghparihar.github.io/RoRD},
                url={https://arxiv.org/abs/2103.08573},
+               pdf={https://arxiv.org/pdf/2103.08573.pdf},
 }
 
 @misc{
@@ -38,8 +37,6 @@
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Data Generation Using Sequence-to-Sequence},
                year={2018},
-               volume={},
-               number={},
                pages={108-112},
                doi={10.1109/RAICS.2018.8635052},
                bibtex_show={true},
@@ -51,8 +48,6 @@
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Indian Language Transliteration Using Deep Learning},
                year={2018},
-               volume={},
-               number={},
                pages={103-107},
                doi={10.1109/RAICS.2018.8635077},
                bibtex_show={true},
