--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,15 +3,14 @@
 
 
 @INPROCEEDINGS{
-               abbr={IEEE IROS},
+               abbr={IROS},
                author={Singh Parihar, Udit and Gujarathi, Aniket and Mehta, Kinal and Tourani, Satyajit and Garg, Sourav and Milford, Michael and Krishna, K. Madhava},
                booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
                title={RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching},
                year={2021},
                pages={1593-1600},
                doi={10.1109/IROS51168.2021.9636619},
-               selected={true},
-               bibtex_show={true},
+               selected={true},   
 }
 
 @misc{
@@ -24,22 +23,20 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       selected={true},
-      bibtex_show={true},
 }
 
 @INPROCEEDINGS{
-               abbr={IEEE RAICS},
+               abbr={RAICS},
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Data Generation Using Sequence-to-Sequence},
                year={2018},
                pages={108-112},
                doi={10.1109/RAICS.2018.8635052},
-               bibtex_show={true},
 }
 
 @INPROCEEDINGS{
-               abbr={IEEE RAICS},
+               abbr={RAICS},
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Indian Language Transliteration Using Deep Learning},
