--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,47 +2,46 @@
 ---
 
 
-@INPROCEEDINGS{
-               abbr={IROS},
-               title={RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching},
+@INPROCEEDINGS{9636619,
                author={Singh Parihar, Udit and Gujarathi, Aniket and Mehta, Kinal and Tourani, Satyajit and Garg, Sourav and Milford, Michael and Krishna, K. Madhava},
-               year={2021},
                booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+               title={RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching},
+               year={2021},
+               volume={},
+               number={},
                pages={1593-1600},
                doi={10.1109/IROS51168.2021.9636619},
-               selected={true},   
+               selected={true}
 }
 
-@misc{
-      abbr={arXiv},
+@misc{valloli2019wnet,
       title={W-Net: Reinforced U-Net for Density Map Estimation}, 
       author={Varun Kannadi Valloli and Kinal Mehta},
       year={2019},
-      booktitle={arXiv},
       eprint={1903.11249},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
-      selected={true},
+      selected={true}
 }
 
-@INPROCEEDINGS{
-               abbr={RAICS},
+@INPROCEEDINGS{8635052,
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Data Generation Using Sequence-to-Sequence},
                year={2018},
+               volume={},
+               number={},
                pages={108-112},
-               doi={10.1109/RAICS.2018.8635052},
+               doi={10.1109/RAICS.2018.8635052}
 }
 
-@INPROCEEDINGS{
-               abbr={RAICS},
+@INPROCEEDINGS{8635077,
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Indian Language Transliteration Using Deep Learning},
                year={2018},
+               volume={},
+               number={},
                pages={103-107},
-               doi={10.1109/RAICS.2018.8635077},
+               doi={10.1109/RAICS.2018.8635077}
 }
-
-
