bib details update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 
 
 @INPROCEEDINGS{9636619,
+               abbr={IEEE IROS},
                author={Singh Parihar, Udit and Gujarathi, Aniket and Mehta, Kinal and Tourani, Satyajit and Garg, Sourav and Milford, Michael and Krishna, K. Madhava},
                booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
                title={RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching},
@@ -11,7 +12,11 @@
                number={},
                pages={1593-1600},
                doi={10.1109/IROS51168.2021.9636619},
-               selected={true}
+               selected={true},
+               html={https://uditsinghparihar.github.io/RoRD},
+               url={https://arxiv.org/abs/2103.08573},
+               pdf={https://arxiv.org/pdf/2103.08573.pdf},
+               bibtex_show={true},
 }
 
 @misc{valloli2019wnet,
