final bib updates

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,31 +2,30 @@
 ---
 
 
-@INPROCEEDINGS{9636619,
+@INPROCEEDINGS{rord2021,
                abbr={IEEE IROS},
                author={Singh Parihar, Udit and Gujarathi, Aniket and Mehta, Kinal and Tourani, Satyajit and Garg, Sourav and Milford, Michael and Krishna, K. Madhava},
                booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
                title={RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching},
                year={2021},
-               volume={},
-               number={},
                pages={1593-1600},
                doi={10.1109/IROS51168.2021.9636619},
                selected={true},
                html={https://uditsinghparihar.github.io/RoRD},
                url={https://arxiv.org/abs/2103.08573},
-               pdf={https://arxiv.org/pdf/2103.08573.pdf},
                bibtex_show={true},
 }
 
-@misc{valloli2019wnet,
+@misc{wnet2019,
       title={W-Net: Reinforced U-Net for Density Map Estimation}, 
       author={Varun Kannadi Valloli and Kinal Mehta},
       year={2019},
       eprint={1903.11249},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
-      selected={true}
+      html={https://arxiv.org/abs/1903.11249},
+      selected={true},
+      bibtex_show={true},
 }
 
 @INPROCEEDINGS{8635052,
@@ -34,10 +33,10 @@
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Data Generation Using Sequence-to-Sequence},
                year={2018},
-               volume={},
-               number={},
                pages={108-112},
-               doi={10.1109/RAICS.2018.8635052}
+               doi={10.1109/RAICS.2018.8635052},
+               html={https://ieeexplore.ieee.org/abstract/document/8635052},
+               bibtex_show={true},
 }
 
 @INPROCEEDINGS{8635077,
@@ -45,8 +44,8 @@
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Indian Language Transliteration Using Deep Learning},
                year={2018},
-               volume={},
-               number={},
                pages={103-107},
-               doi={10.1109/RAICS.2018.8635077}
+               doi={10.1109/RAICS.2018.8635077},
+               html={https://ieeexplore.ieee.org/abstract/document/8635077},
+               bibtex_show={true},
 }
