bib add publication abbrivation

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,6 +17,7 @@
 }
 
 @misc{wnet2019,
+      abbr={arXiv},
       title={W-Net: Reinforced U-Net for Density Map Estimation}, 
       author={Varun Kannadi Valloli and Kinal Mehta},
       year={2019},
@@ -29,6 +30,7 @@
 }
 
 @INPROCEEDINGS{8635052,
+               abbr={IEEE RAICS},
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Data Generation Using Sequence-to-Sequence},
@@ -40,6 +42,7 @@
 }
 
 @INPROCEEDINGS{8635077,
+               abbr={IEEE RAICS},
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
                booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Indian Language Transliteration Using Deep Learning},
