update publications and about page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,55 @@
 ---
 ---
 
+@InProceedings{mehta2023marl-jax,
+abbr={ECML-PKDD},
+author={Kinal Mehta and Anuj Mahajan and Pawan Kumar},
+title={marl-jax: Multi-agent Reinforcement Leaning Framework for Social Generalization},
+booktitle={Machine Learning and Knowledge Discovery in Databases. Applied Data Science and Demo Track},
+year={2023},
+publisher={Springer International Publishing},
+html={https://arxiv.org/abs/2303.13808},
+selected={true},
+bibtex_show={true},
+}
+
+@article{JMLR:v23:21-1342,
+  author  = {Shengyi Huang and Rousslan Fernand Julien Dossa and Chang Ye and Jeff Braga and Dipam Chakraborty and Kinal Mehta and JoÃ£o G.M. AraÃºjo},
+  title   = {CleanRL: High-quality Single-file Implementations of Deep Reinforcement Learning Algorithms},
+  journal = {Journal of Machine Learning Research},
+  booktitle = {Journal of Machine Learning Research},
+  year    = {2022},
+  volume  = {23},
+  number  = {274},
+  pages   = {1--18},
+  html     = {http://jmlr.org/papers/v23/21-1342.html},
+  selected={true},
+  bibtex_show={true},
+}
+
+@INPROCEEDINGS{mehta2023effects,
+            abbr={IEEE IJCNN},
+            author={Kinal Mehta and Anuj Mahajan and Pawan Kumar},
+            booktitle={2022 International Joint Conference on Neural Networks (IJCNN)}, 
+            title={Effects of Spectral Normalization in Multi-agent Reinforcement Learning}, 
+            year={2023},
+            html={https://arxiv.org/abs/2212.05331},
+            selected={true},
+            bibtex_show={true},
+}
+
+@misc{peri2022ref,
+      title={ReF - Rotation Equivariant Features for Local Feature Matching}, 
+      author={Abhishek Peri and Kinal Mehta and Avneesh Mishra and Michael Milford and Sourav Garg and K. Madhava Krishna},
+      booktitle={arXiv Preprint},
+      year={2022},
+      eprint={2203.05206},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      html={https://arxiv.org/abs/2203.05206},
+      selected={true},
+      bibtex_show={true},
+}
 
 @INPROCEEDINGS{rord2021,
                abbr={IEEE IROS},
@@ -18,8 +67,9 @@
 
 @misc{wnet2019,
       abbr={arXiv},
-      title={W-Net: Reinforced U-Net for Density Map Estimation}, 
       author={Varun Kannadi Valloli and Kinal Mehta},
+      booktitle={arXiv Preprint},
+      title={W-Net: Reinforced U-Net for Density Map Estimation}, 
       year={2019},
       eprint={1903.11249},
       archivePrefix={arXiv},
