--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,7 @@ bibtex_show={true},
 }
 
 @article{JMLR:v23:21-1342,
+  abbr    = {JMLR},
   author  = {Shengyi Huang and Rousslan Fernand Julien Dossa and Chang Ye and Jeff Braga and Dipam Chakraborty and Kinal Mehta and JoÃ£o G.M. AraÃºjo},
   title   = {CleanRL: High-quality Single-file Implementations of Deep Reinforcement Learning Algorithms},
   journal = {Journal of Machine Learning Research},
@@ -22,9 +23,9 @@ bibtex_show={true},
   volume  = {23},
   number  = {274},
   pages   = {1--18},
-  html     = {http://jmlr.org/papers/v23/21-1342.html},
-  selected={true},
-  bibtex_show={true},
+  html    = {http://jmlr.org/papers/v23/21-1342.html},
+  selected = {true},
+  bibtex_show = {true},
 }
 
 @INPROCEEDINGS{mehta2023effects,
