--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,7 @@ bibtex_show={true},
             bibtex_show={true},
 }
 
-@misc{peri2022ref,
+@article{peri2022ref,
       title={ReF - Rotation Equivariant Features for Local Feature Matching}, 
       author={Abhishek Peri and Kinal Mehta and Avneesh Mishra and Michael Milford and Sourav Garg and K. Madhava Krishna},
       booktitle={arXiv Preprint},
@@ -66,7 +66,7 @@ bibtex_show={true},
                bibtex_show={true},
 }
 
-@misc{wnet2019,
+@article{wnet2019,
       abbr={arXiv},
       author={Varun Kannadi Valloli and Kinal Mehta},
       booktitle={arXiv Preprint},
