--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,12 +5,23 @@
 abbr={ECML-PKDD},
 author={Kinal Mehta and Anuj Mahajan and Pawan Kumar},
 title={marl-jax: Multi-agent Reinforcement Leaning Framework for Social Generalization},
-booktitle={Machine Learning and Knowledge Discovery in Databases. Applied Data Science and Demo Track},
+booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases. Demo Track},
 year={2023},
 publisher={Springer International Publishing},
 html={https://arxiv.org/abs/2303.13808},
-selected={true},
 bibtex_show={true},
+selected={true},
+}
+
+@INPROCEEDINGS{mehta2023effects,
+abbr={IEEE IJCNN},
+author={Kinal Mehta and Anuj Mahajan and Pawan Kumar},
+booktitle={International Joint Conference on Neural Networks (IJCNN)}, 
+title={Effects of Spectral Normalization in Multi-agent Reinforcement Learning}, 
+year={2023},
+html={https://arxiv.org/abs/2212.05331},
+bibtex_show={true},
+selected={true},
 }
 
 @article{JMLR:v23:21-1342,
@@ -24,22 +35,12 @@ bibtex_show={true},
   number  = {274},
   pages   = {1--18},
   html    = {http://jmlr.org/papers/v23/21-1342.html},
-  selected = {true},
   bibtex_show = {true},
-}
-
-@INPROCEEDINGS{mehta2023effects,
-            abbr={IEEE IJCNN},
-            author={Kinal Mehta and Anuj Mahajan and Pawan Kumar},
-            booktitle={2022 International Joint Conference on Neural Networks (IJCNN)}, 
-            title={Effects of Spectral Normalization in Multi-agent Reinforcement Learning}, 
-            year={2023},
-            html={https://arxiv.org/abs/2212.05331},
-            selected={true},
-            bibtex_show={true},
+  selected = {true},
 }
 
 @article{peri2022ref,
+      abbr={arXiv},
       title={ReF - Rotation Equivariant Features for Local Feature Matching}, 
       author={Abhishek Peri and Kinal Mehta and Avneesh Mishra and Michael Milford and Sourav Garg and K. Madhava Krishna},
       booktitle={arXiv Preprint},
@@ -48,19 +49,17 @@ bibtex_show={true},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       html={https://arxiv.org/abs/2203.05206},
-      selected={true},
       bibtex_show={true},
 }
 
 @INPROCEEDINGS{rord2021,
                abbr={IEEE IROS},
                author={Singh Parihar, Udit and Gujarathi, Aniket and Mehta, Kinal and Tourani, Satyajit and Garg, Sourav and Milford, Michael and Krishna, K. Madhava},
-               booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+               booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
                title={RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching},
                year={2021},
                pages={1593-1600},
                doi={10.1109/IROS51168.2021.9636619},
-               selected={true},
                html={https://uditsinghparihar.github.io/RoRD},
                url={https://arxiv.org/abs/2103.08573},
                bibtex_show={true},
@@ -76,14 +75,13 @@ bibtex_show={true},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       html={https://arxiv.org/abs/1903.11249},
-      selected={true},
       bibtex_show={true},
 }
 
 @INPROCEEDINGS{8635052,
                abbr={IEEE RAICS},
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
-               booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
+               booktitle={IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Data Generation Using Sequence-to-Sequence},
                year={2018},
                pages={108-112},
@@ -95,7 +93,7 @@ bibtex_show={true},
 @INPROCEEDINGS{8635077,
                abbr={IEEE RAICS},
                author={Joshi, Akshat and Mehta, Kinal and Gupta, Neha and Valloli, Varun Kannadi},
-               booktitle={2018 IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
+               booktitle={IEEE Recent Advances in Intelligent Computational Systems (RAICS)},
                title={Indian Language Transliteration Using Deep Learning},
                year={2018},
                pages={103-107},
